--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,18 +1,21 @@
 pipeline {
     agent any
-    stages {
-      stage('Init') {
-        steps {
-          sh 'ls'
-          sh 'export TF_IN_AUTOMATION=true'
-          sh 'terraform init -no-color'
-        }
-      }
-      stage('Plan') {
-        steps {
-          sh 'export TF_IN_AUTOMATION=true'
-          sh 'terraform plan -no-color'
-        }
-      }
+    environment {
+        TF_IN_AUTOMATION = 'true'
     }
+    stages {
+        stage('Init') {
+            steps {
+                sh 'ls'
+                sh 'export IF_IN_AUTOMATION=true
+                sh 'terraform init -no-color'
+            }
+        }
+        stage('Plan') {
+            steps {
+                sh 'export IF_IN_AUTOMATION=true
+                sh 'terraform plan -no-color'
+            }
+        }
+     }
 }
