first pipeline issue

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,13 +7,13 @@ pipeline {
         stage('Init') {
             steps {
                 sh 'ls'
-                sh 'export IF_IN_AUTOMATION=true
+                sh 'export IF_IN_AUTOMATION=true'
                 sh 'terraform init -no-color'
             }
         }
         stage('Plan') {
             steps {
-                sh 'export IF_IN_AUTOMATION=true
+                sh 'export IF_IN_AUTOMATION=true'
                 sh 'terraform plan -no-color'
             }
         }
